--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,11 +15,10 @@ header {
     height: 25vh;
     position: relative;
     z-index: 2;
-    background-image: url(../../public/images/bg-header-desktop.svg);
+    background-image: url(../images/bg-header-desktop.svg);
     background-color: $header-bg-color;
-
     @media screen and (max-width: 640px) {
-        background-image: url(../../public/images/bg-header-mobile.svg);
+        background-image: url(../images/bg-header-mobile.svg);
         background-size: cover;
     }
 }
