solve background issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,16 +11,17 @@ body {
 }
 
 header {
-  height: 25vh;
+  height: 10rem;
   position: relative;
   z-index: 2;
   background-image: url(../images/bg-header-desktop.svg);
   background-color: hsl(180deg, 29%, 50%);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 @media screen and (max-width: 640px) {
   header {
     background-image: url(../images/bg-header-mobile.svg);
-    background-size: cover;
   }
 }
 
@@ -29,6 +30,7 @@ header {
   position: relative;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 3rem;
   gap: 2rem;
   z-index: 5;
 }
